<resources>
    <string name="app_name">Fit Buddy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categoryHeader">Category</string>
    <string name="category_format">Category: %s</string>
    <string name="equipment_format">Equipments: %s</string>
    <string name="equipment_not_found">No Equipments</string>
    <string name="equipment_header">Equipment</string>
    <string name="num_active_filters">%d Active</string>
    <string name="clear_all">Clear all</string>
    <string name="num_active_filter_long">%d Active Filters</string>
    <string name="none_item">None</string>
    <string name="no_results_found">No Results Found</string>
    <string name="num_results_found">%d Results</string>
    <string name="watch_tutorial">Watch Tutorial</string>
    <string name="age">Age</string>
    <string name="age_container">27 yrs</string>
    <string name="update">UPDATE</string>
    <string name="wt_format">86 Kg</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="ht_format">165 cm</string>
    <string name="unit_kg">kg</string>
    <string name="unit_cm">cm</string>
    <string name="age_format_years">%d yrs</string>
    <string name="submit">SUBMIT</string>
    <string name="workout_manager">Workout</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="exercise_sets">Sets</string>
    <string name="exercise_reps">Reps</string>
    <string name="exercise_selected">Selected</string>
    <string name="edit_sets_reps">EDIT</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_name">NAME:\nHardik Sachan</string>
    <string name="cf_code">CF06</string>
    <string name="school_name">SCHOOL:\nDelhi Public School Barra</string>
    <string name="about">About</string>
    <string name="history">History</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <!-- Output to TextView styled with a little HTML -->
    <string name="title"><![CDATA[<h3>HERE IS YOUR SLEEP DATA</h3>]]></string>
    <string name="start_time"><![CDATA[<b>Start:</b>]]></string>
    <string name="end_time"><![CDATA[<b>End:</b>]]></string>
    <string name="quality"><![CDATA[<b>Quality:</b>]]></string>
    <string name="hours_slept"><![CDATA[<b>Hours:Minutes:Seconds</b>]]></string>

    <!-- Sleep quality strings -->
    <string name="how_was_hour_sleep">How was your sleep?</string>
    <string name="zero_very_bad">Very bad</string>
    <string name="one_poor">Poor</string>
    <string name="two_soso">So-so</string>
    <string name="three_ok">OK</string>
    <string name="four_pretty_good">Pretty good</string>
    <string name="five_excellent">Excellent!</string>
    <string name="sleep_tracker">Sleep</string>
    <string name="minutes_length">%d minutes on %s</string>
    <string name="hours_length">%d hours on %s</string>
    <string name="seconds_length">%d seconds on %s</string>

    <string name="bmi_underweight">BMI: %.1f\nUnderWeight</string>
    <string name="bmi_normal">BMI: %.1f\nNormal</string>
    <string name="bmi_overweight">BMI: %.1f\nOverWeight</string>
    <string name="bmi_obese">BMI: %.1f\nObese</string>
</resources>