<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="sharedViewModel"
            type="com.hardiksachan.fitbuddy.sleep.SleepActivitySharedViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".sleep.SleepTrackerFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_start"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:layout_weight=".5"
                android:text="@string/start"
                android:textColor="@color/secondaryColor" />

            <Button
                android:id="@+id/btn_stop"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:layout_weight=".5"
                android:text="@string/stop"
                android:textColor="@color/secondaryColor" />

            <Button
                android:id="@+id/btn_clear"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:layout_weight=".5"
                android:text="@string/clear_all"
                android:textColor="@color/primaryDarkColor" />
        </LinearLayout>

        <TextView
            android:id="@+id/sleep_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

    </LinearLayout>
</layout>