<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal"
            android:text="Add Exercise"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:layout_weight=".25"
                android:text="@string/exercise_sets"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceBody1" />

            <EditText
                android:id="@+id/et_sets"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:layout_weight=".25"
                android:inputType="number"
                android:textAlignment="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:layout_weight=".25"
                android:text="@string/exercise_reps"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceBody1" />

            <EditText
                android:id="@+id/et_reps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:layout_weight=".25"
                android:inputType="number"
                android:textAlignment="center" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:layout_weight=".5"
                android:text="@android:string/cancel" />

            <Button
                android:id="@+id/btn_submit"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:layout_weight=".5"
                android:text="@string/submit" />
        </LinearLayout>
    </LinearLayout>
</layout>