<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.hardiksachan.fitbuddy.domain.User" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dashboard_background"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_extra_large"
            tools:context=".dashboard.MainDashboardFragment">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:padding="@dimen/spacing_extra_large"
                android:text="Dashboard"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textColor="?attr/colorOnPrimary"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_normal"
                android:padding="@dimen/spacing_normal"
                app:cardCornerRadius="@dimen/spacing_normal"
                app:cardElevation="@dimen/spacing_normal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_gravity="center_vertical"
                        android:paddingHorizontal="@dimen/spacing_large"
                        android:src="@drawable/ic_account_circle_white_18dp"
                        app:tint="@android:color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing_normal">

                        <TextView
                            android:id="@+id/tv_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="John Doe"
                            android:textAlignment="textStart"
                            android:textAppearance="?attr/textAppearanceHeadline5"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_user_age"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="27 yrs"
                            android:textAlignment="textStart"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/tv_user_gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Male"
                            android:textAlignment="textStart"
                            android:textSize="24sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_normal"
                    android:layout_weight=".5"
                    app:cardCornerRadius="@dimen/spacing_normal"
                    app:cardElevation="@dimen/spacing_normal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing_normal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="@dimen/spacing_small"
                            android:text="@string/weight"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            app:drawableTint="@android:color/black" />

                        <TextView
                            android:id="@+id/tv_user_wt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/spacing_large"
                            android:text="85"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceHeadline5"
                            android:textStyle="bold"
                            app:tint="@android:color/black" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/spacing_large"
                            android:text="@string/unit_kg"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceHeadline5" />


                        <Button
                            android:id="@+id/btn_update_weight"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/update"
                            android:textColor="@color/secondaryColor" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/history"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceBody2"
                            app:drawableRightCompat="@drawable/ic_navigate_next_white_18dp"
                            app:drawableTint="@android:color/black" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_height"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_normal"
                    android:layout_weight=".5"
                    app:cardCornerRadius="@dimen/spacing_normal"
                    app:cardElevation="@dimen/spacing_normal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing_normal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="@dimen/spacing_small"
                            android:text="@string/height"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            app:drawableTint="@android:color/black" />

                        <TextView
                            android:id="@+id/tv_user_ht"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/spacing_large"
                            android:text="107"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceHeadline5"
                            android:textStyle="bold"
                            app:tint="@android:color/black" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/spacing_large"
                            android:text="@string/unit_cm"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceHeadline5" />


                        <Button
                            android:id="@+id/btn_update_height"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/update"
                            android:textColor="@color/secondaryColor" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/history"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceBody2"
                            app:drawableRightCompat="@drawable/ic_navigate_next_white_18dp"
                            app:drawableTint="@android:color/black" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_exercise"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_normal"
                    android:layout_weight=".5"
                    app:cardCornerRadius="@dimen/spacing_normal"
                    app:cardElevation="@dimen/spacing_normal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing_normal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="@dimen/spacing_small"
                            android:text="@string/workout_manager"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <ImageView
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_fitness_center_white_18dp"
                            app:tint="@android:color/black" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_sleep"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_normal"
                    android:layout_weight=".5"
                    app:cardCornerRadius="@dimen/spacing_normal"
                    app:cardElevation="@dimen/spacing_normal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing_normal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="@dimen/spacing_small"
                            android:text="@string/sleep_tracker"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <ImageView
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_fitness_center_white_18dp"
                            app:tint="@android:color/black" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</layout>