<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.hardiksachan.fitbuddy.mainactivityfragments.exerciseselector.ExerciseSelectorViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".mainactivityfragments.exerciseselector.ExerciseSelectorFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/exerciseSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:iconifiedByDefault="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_active_filters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginEnd="@dimen/spacing_small"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:text="@string/num_active_filter_long"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_clear_filters"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/exerciseSearch" />

                <Button
                    android:id="@+id/btn_clear_filters"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:text="@string/clear_all"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/chip_active_filters"
                    app:layout_constraintTop_toBottomOf="@+id/exerciseSearch" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <include layout="@layout/horizontal_divider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_exercise_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="6"
                tools:listitem="@layout/recyclerview_item_exercise" />


            <LinearLayout
                android:visibility="gone"
                android:id="@+id/no_results_found_layout"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".7"
                    android:src="@drawable/ic_error_white_18dp"
                    app:tint="?attr/colorControlHighlight"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".3"
                    android:gravity="center"
                    android:textAppearance="?attr/textAppearanceSearchResultTitle"
                    android:text="@string/no_results_found"/>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/spacing_normal"
            android:onClick="@{() -> viewModel.onFilterFabClicked()}"
            app:srcCompat="@drawable/ic_filter_alt_white" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>